--- a/css/styles.css
+++ b/css/styles.css
@@ -11,5 +11,21 @@
 }
 
 h1 {
-  font-size: 30px;
+  font-size: 250%;
+}
+
+.feature {
+
+}
+
+h2 {
+  font-size: 150%;
+}
+
+p {
+  font-size: 100%
+}
+
+.know {
+  
 }
